# yt-dashboard

./: .gitignore  README.md  data_extract.py  data_transform.py  main.py  pyproject.toml  requirements.txt  requirements_pipeline.txt
.github/workflows/: data_pipeline.yml
config/: api_key.py  aws.py  channel_id.py  path.py
dashboard/: Home.py  dashboard.py  texts.py
dashboard/pages/: Financas.py  Fitness.py  Podcast.py  Viagens.py
dashboard/utils/: channel_id.py  dashboard_base.py  texts.py
dashboard/utils/dashboard_code/: channel_analysis.py  channel_id.py  comparative_analysis.py  curiosity.py  load_data.py  overview.py  seasonality_analysis.py  suggestions.py  texts.py  title_performance.py  video_duration.py  weekday_correlation.py
extract/channel/: channel_extract.py  raw_channel.py
extract/video/: video_channel.py  video_extract.py  videos_extract.py
transform/channel/: channel_transform.py
transform/video/: bronze_transform.py  silver_transform.py  video_transform.py
utils/: s3_utils.py
