[project]
name = "yt-dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Pineda",email = "allexhenrique@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client (>=2.161.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "isodate (>=0.7.2,<0.8.0)",
    "streamlit (>=1.42.2,<2.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
